add omniauth-meetup gem to gemfile

--- a/gentle_reminder/Gemfile
+++ b/gentle_reminder/Gemfile
@@ -10,6 +10,7 @@ gem 'debugger'
 gem 'nokogiri'
 
 gem 'omniauth-github'
+gem 'omniauth-meetup'
 gem 'figaro'
 
 # Gems used only for assets and not required
