--- a/gentle_reminder/Gemfile
+++ b/gentle_reminder/Gemfile
@@ -43,6 +43,6 @@ gem 'bcrypt-ruby', '~> 3.0.0'
 # To use debugger
 # gem 'debugger'
 
-gem 'github_api'
+# gem 'github_api'
 gem "octokit"
 gem 'pry-rails'
