--- a/gentle_reminder/Gemfile
+++ b/gentle_reminder/Gemfile
@@ -26,6 +26,9 @@ group :assets do
   gem 'coffee-rails', '~> 3.2.1'
   gem 'compass-rails'
   
+  gem "therubyracer"
+  gem "less-rails"
+  gem "twitter-bootstrap-rails"
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
   # gem 'therubyracer', :platforms => :ruby
